ghc-4335c07/testsuite/tests/deriving/should_fail/T10598_fail1.stderr

T10598_fail1.hs:9:40: error:
    • Can't make a derived instance of
        ‘Show A’ with the newtype strategy:
        GeneralizedNewtypeDeriving cannot be used on non-newtypes
    • In the data declaration for ‘A’

T10598_fail1.hs:10:40: error:
    • Can't make a derived instance of ‘Num B’ with the stock strategy:
        ‘Num’ is not a stock derivable class (Eq, Show, etc.)
    • In the newtype declaration for ‘B’
